--- a/app/build.gradle
+++ b/app/build.gradle
@@ -68,4 +68,7 @@ dependencies {
 
     implementation 'com.squareup.picasso:picasso:2.71828'
 
+    //Android Image Cropper Library
+    implementation 'com.theartofdev.edmodo:android-image-cropper:2.8.+'
+
 }
